# portefaix-kubernetes

./: .dprint.json  .dprint.jsonc  .editorconfig  .envrc  .gitattributes  .gitignore  .licenserc.yaml  .pdm.toml  .pre-commit-config.yaml  .release-please-manifest.json  .rumdl.toml  .taplo.toml  .tflint.hcl  .tfsec.yml  .yamlfmt  .yamlfmt.yaml  .yamllint.yml  404.html  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Gemfile  LICENSE  Makefile  README.md  SECURITY.md  ansible.cfg  aws.mk  aws.staging.mk  azure.mk  commons.mk  ct.yaml  dependabot.yml  gcp.mk  gcp.prod.mk  index.html  kind.mk  licenserc.toml  local.mk  (+14 more)
.github/: .licenserc.yaml  CODEOWNERS  dependabot.yml  governance.yml  issue_label_bot.yaml  label-commenter-config.yml  labeler.yml  labels.yaml  labels.yml  pr-branch-labeler.yml  release-drafter.yml  release-please-config.json  renovate.json5  settings.yml  stale.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/deprecated/: rootly-aws.yml  rootly-azure.yml  rootly-gcp.yml  rootly-homelab.yml  security-kubesec.yml  security-snyk.yml  security-tfsec.yml  security-trivy.yml
.github/workflows/: ansible-run-homelab.yml  argo-build.yml  chart-release.yml  charts.yml  check-license.yml  cicd-otel.yml  cloudflare.yml  draft-labels.yml  e2e.yml  flux-build.yml  flux-e2e.yml  flux-opa.yml  flux-schedule.yml  github-pages.yml  gitleaks.yml  governance-bot.yml  (+61 more)
.secrets/: foo2.yaml  foo3.yaml  k8s-secret-sealed-secret-private-key.yaml  slack-webhook-url.yaml
CONTRIBUTING/: index.html
catalog/: catalog-info.yaml
code-of-conduct/: index.html
config/: pub-sealed-secrets.pem
diagrams/: alertmanager.py  certmanager.py  certmanager_crds.py  cloud.py  config.py  flux.py  flux_crds.py  flux_monitoring.py  grafana.py  k8s.py  kube_state_metrics.py  kubernetes.py  letsencrypt.py  node_exporter.py  pomerium.py  portefaix.py  prometheus.py  prometheus_operator.py  pushgateway.py  thanos.py  velero.py  velero_crds.py
docs/: CNAME  README.md  config.toml  index.md  package-lock.json  package.json  requirements.txt  roadmap.md
hack/: alicloud.mk  alicloud.staging.mk  aws.mk  aws.staging.mk  azure.dev.mk  azure.mk  bootstrap.sh  commons.mk  gcp.mk  gcp.prod.mk  k3s.cicd.mk  k3s.homelab.mk  k3s.mk  kind.local.mk  kind.mk  scw.mk  scw.staging.mk
mkdocs/: main.html
roadmap/: index.html
search/: search_index.json
sources/: flagger-charts.yaml  openfaas-charts.yaml  repo.yaml
testing/: busybox.yaml  dns.yaml
troubleshooting/: index.html
(+6245 files in other folders)
