# Copyright (C) Nicolas Lamirault <nicolas.lamirault@gmail.com>
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

# [tool.poetry]
# name = "portefaix"
# version = "0.1.0"
# description = ""
# authors = ["Nicolas Lamirault <nicolas.lamirault@gmail.com>"]

# [tool.poetry.dependencies]
# python = "^3.8"
# ansible = "^7.0.0"
# pre-commit = "^2.15.0"

# [tool.poetry.dev-dependencies]
# black = "^20.8b1"


[project]
name = "portefaix"
version = "0.1.0"
description = ""
authors = [
    {name = "Nicolas Lamirault",email = "nicolas.lamirault@gmail.com"},
]
dependencies = [
    "ansible<8.0.0,>=7.0.0",
    "pre-commit<3.0.0,>=2.15.0"
]
requires-python = ">=3.9,<4.0"
license = {text = "Apache-2.0"}

[project.urls]

[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "black<21.0,>=20.8b1",
]

[tool.pdm.build]
includes = []

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"
