# SPDX-FileCopyrightText: Copyright (C) Nicolas Lamirault <nicolas.lamirault@gmail.com>
# SPDX-License-Identifier: Apache-2.0

[tool.poetry]
name = "portefaix"
version = "0.1.0"
description = ""
authors = ["Nicolas Lamirault <nicolas.lamirault@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
ansible = "^11.0.0"
pre-commit = "^4.0.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
