# SPDX-FileCopyrightText: Copyright (C) Nicolas Lamirault <nicolas.lamirault@gmail.com>
# SPDX-License-Identifier: Apache-2.0

[project]
name = "portefaix-kubernetes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "skills-ref",
]

[tool.uv.sources]
skills-ref = { git = "https://github.com/agentskills/agentskills", subdirectory = "skills-ref" }
